# HarmonyEngine

./: .gitignore  CMakeLists.txt
Extensions/: CMakeLists.txt
Extensions/Kernel/source/: Kernel.cpp  Kernel.h
Extensions/Runner/source/: Runner.cpp  Runner.h
Extensions/StateDirector/source/: StateDirector.cpp  StateDirector.h
Extensions/StateStack/source/: StateStack.cpp  StateStack.h
Extensions/Window/source/: Window.cpp  Window.h
Harmony/: CMakeLists.txt
Harmony/assets/: logger_config.json
Harmony/include/Harmony/: Harmony.h  Properties.h  Properties.inl
Harmony/include/Harmony/Core/: ContextLogger.h  Controller.h  Engine.h  Extension.h  Kernal.h  Kernel.h  Logger.h  Registry.h  Registry.inl  Service.h
Harmony/include/Harmony/Details/: DefaultLoggerConfig.inc  PropertiesRegistry.inc
Harmony/include/Harmony/Interfaces/: IEngine.h  IKernel.h  IKernel.inl  IRunner.h  IScene.h  IStateDirector.h  IStateStack.h  IWindow.h
Harmony/include/Harmony/Systems/: Registry.h  Registry.inl  Service.h
Harmony/include/Harmony/Utilities/: Guarded.h  Guarded.inl  Logger.h  Logger.inl  Properties.h  Properties.inl  Uncopyable.h
Harmony/source/: Harmony.cpp  Properties.cpp  PropertiesRegistry.inc
Harmony/source/Core/: ContextLogger.cpp  Controller.cpp  Engine.cpp  Extension.cpp  Kernal.cpp  Kernel.cpp  Logger.cpp  Service.cpp
Harmony/source/Extension/: Engine.cpp  Engine.h  Kernel.cpp  Kernel.h  RaylibWindow.cpp  RaylibWindow.h
Harmony/source/Extension/Details/: RaylibWindowConfig.inc
Harmony/source/Modules/: Kernal.cpp  Kernal.h  RaylibWindow.cpp  RaylibWindow.h
Harmony/source/Systems/: Controller.cpp  Service.cpp
Harmony/source/Utilities/: Logger.cpp  Properties.cpp
Sandbox/: CMakeLists.txt
Sandbox/assets/: application.json
Sandbox/source/: main.cpp
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
_codeql_build_dir/Harmony/: Makefile  cmake_install.cmake
_codeql_build_dir/Sandbox/: Makefile  Sandbox  cmake_install.cmake
